# AlephBFT

./: .gitignore  404.html  Cargo.toml  README.md  aleph_bft_api.html  book.toml  chapter_1.html  chapter_2.html  conventions.md  cov_report.sh  differences.html  gen_cov_data.sh  how_alephbft_does_it.html  index.html  install_cov_tools.sh  internals.html  print.html  reliable_broadcast.html  run_local_pipeline.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  what_is_aleph_bft.html
.github/: dependabot.yml
.github/actions/check-version-bumped/: action.yml
.github/actions/install-rust-toolchain/: action.yml
.github/scripts/: cargo-toml-match-readme-version.sh
.github/workflows/: cargo-audit.yml  check-version-bumped-consensus.yml  check-version-bumped-crypto.yml  check-version-bumped-mock.yml  check-version-bumped-rmc.yml  check-version-bumped-types.yml  check-version-bumped.yml  ci.yml  gh-pages.yml  post-dod-checklist.yml  publish-package.yml  publish-packages.yml  push-foundation-repo.yml  readme-cargo-toml-versions-aligned-consensus.yml  readme-cargo-toml-versions-aligned.yml  version-bump.yml
consensus/: Cargo.toml
consensus/src/: alerts.rs  config.rs  consensus.rs  extender.rs  interface.rs  lib.rs  member.rs  network.rs  rmc.rs  runway.rs  signed.rs  task_queue.rs  terminal.rs  terminator.rs  units.rs  validation.rs
consensus/src/alerts/: handler.rs  io.rs  mod.rs  service.rs
consensus/src/backup/: loader.rs  mod.rs  saver.rs
consensus/src/collection/: mod.rs  service.rs
consensus/src/consensus/: handler.rs  mod.rs  service.rs
consensus/src/creation/: collector.rs  creator.rs  mod.rs  packer.rs
consensus/src/dag/: mod.rs  validation.rs
consensus/src/dag/reconstruction/: dag.rs  mod.rs  parents.rs
consensus/src/dissemination/: mod.rs  responder.rs  task.rs
consensus/src/extension/: election.rs  extender.rs  mod.rs  units.rs
consensus/src/network/: hub.rs  mod.rs  unit.rs
consensus/src/reconstruction/: dag.rs  mod.rs  parents.rs
consensus/src/runway/: backup.rs  collection.rs  mod.rs  packer.rs
consensus/src/testing/: alerts.rs  behind.rs  byzantine.rs  consensus.rs  crash.rs  crash_recovery.rs  creation.rs  dag.rs  mock.rs  mod.rs  rmc.rs  signed.rs  unreliable.rs
consensus/src/units/: control_hash.rs  mod.rs  store.rs  testing.rs  validator.rs
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs  node.rs  signature.rs
docs/: 404.html  book.toml  chapter_1.html  config.rs  creator.rs  index.html  member.rs  print.html  rmc.rs  searchindex.js  searchindex.json  terminal.rs  units.rs
docs-src/: chapter_1.md
docs/rmc/: tests.rs
docs/src/: SUMMARY.md  aleph_bft_api.md  chapter_1.md  chapter_2.md  differences.md  how_alephbft_does_it.md  internals.md  reliable_broadcast.md  rush_api.md  what_is_aleph.md  what_is_aleph_bft.md  what_is_rush.md
docs/testing/: crash.rs  mod.rs  unreliable.rs
docs/units/: store.rs
examples/: dummy_honest.rs
examples/blockchain/: .gitignore  Cargo.toml  chain.rs  crypto.rs  main.rs  network.rs  run.sh  run_blockchain.sh
examples/blockchain/chain/: data.rs  mod.rs
examples/blockchain/examples/: blockchain.rs
examples/blockchain/src/: chain.rs  data.rs  lib.rs  main.rs  network.rs
examples/dummy_honest/: Cargo.toml
examples/dummy_honest/examples/: dummy_honest.rs
examples/ordering/: .gitignore  Cargo.toml  run.sh
examples/ordering/src/: dataio.rs  main.rs  network.rs
fuzz/: Cargo.toml
fuzz/afl_targets/: fuzz_target_1.rs
fuzz/libfuzz_targets/: fuzz_target_1.rs
fuzz/src/: afl_target.rs  fuzz.rs  lib.rs  libfuzz_target.rs  main.rs
fuzzing/src/: fuzz.rs
mock/: Cargo.toml  README.md
mock/src/: dataio.rs  hasher.rs  lib.rs  network.rs  spawner.rs
mock/src/crypto/: keychain.rs  mod.rs  signable.rs  signature.rs  wrappers.rs
rmc/: Cargo.toml  README.md
rmc/src/: handler.rs  lib.rs  scheduler.rs  service.rs
src/: alerts.rs  bft.rs  config.rs  consensus.rs  creator.rs  dag.rs  extender.rs  finalizer.rs  lib.rs  member.rs  network.rs  nodes.rs  rmc.rs  runway.rs  signed.rs  skeleton.rs  syncer.rs  terminal.rs  testing.rs  traits.rs  units.rs  utils.rs
src/creation/: creator.rs  mod.rs
src/creator/: creator.rs  mod.rs
src/rmc/: tests.rs
src/signed/: tests.rs
src/testing/: alerts.rs  byzantine.rs  consensus.rs  crash.rs  creation.rs  dag.rs  fuzz.rs  mock.rs  mock_common.rs  mod.rs  rmc.rs  signed.rs  unreliable.rs
src/testing/mock/: Cargo.toml
src/testing/mock/src/: lib.rs
src/units/: store.rs
types/: Cargo.toml  README.md
types/src/: dataio.rs  lib.rs  network.rs  nodes.rs  signed.rs  tasks.rs  terminator.rs
