[package]
name = "rush"
version = "0.3.0"
authors = ["Cardinal Cryptography"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
parking_lot = "0.11.1"
futures = "0.3.9"
tokio = { version = "1.12.0", features = ["macros", "rt-threaded", "time"] }
mini-redis = "0.4"
derive_more = "0.99.7"
serde = { version = "1.0.110", features = ["derive"] }
futures-timer = "3.0.2"
log = "0.4.14"
env_logger = "0.8.3"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
rand = "0.8.3"
async-trait = "0"

[dev-dependencies]
libp2p = { version ="0", features = ["mdns", "tcp-tokio"]}
