[package]
name = "aleph-bft-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "data-structures", "cryptography", "database"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
repository = "https://github.com/cardinal-cryptography/?"
keywords = ["asynchronous", "consensus", "bft", "blockchain", "distributed-systems"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
derive_more = "0.99"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
