[package]
name = "aleph-bft-crypto"
version = "0.3.1"
edition = "2021"
authors = ["Cardinal Cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/AlephBFT"
readme = "./README.md"
description = "Utilities for node addressing and message signing in the aleph-bft package."

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
derive_more = "0.99"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
