[package]
name = "rush-fuzz"
version = "0.0.1"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
aleph-bft = { path = "..", features = ["fuzz"] }
libfuzzer-sys = { version = "0.4" }
afl = { version = "0.8", optional = true }
structopt = { version = "0.3.8", optional = true }

[features]
default = []
afl-fuzz = ["afl"]
gen = ["structopt"]

[[bin]]
name = "fuzz_target_1"
path = "libfuzz_targets/fuzz_target_1.rs"

[[bin]]
name = "fuzz_target_1_afl"
path = "afl_targets/fuzz_target_1.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "gen_fuzz"
path = "bin/main.rs"
required-features = ["gen"]