[package]
name = "alephbft-fuzz"
version = "0.0.1"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }

aleph-bft = { path = "..", features = ["fuzzing"] }
libfuzzer-sys = { version = "0.4.2", optional = true }
afl = { version = "0.10.1", optional = true }

[features]
default = []
afl-fuzz = ["afl"]
libfuzz = ["libfuzzer-sys"]

[[bin]]
name = "fuzz_target"
path = "src/libfuzz_target.rs"
required-features = ["libfuzz"]

[[bin]]
name = "fuzz_target_afl"
path = "src/afl_target.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "gen_fuzz"
path = "src/main.rs"