[package]
name = "aleph-bft-fuzz"
version = "0.0.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
aleph-bft = { path = "../consensus", version = "*" }
aleph-bft-mock = { path = "../mock", version = "*" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive", "std"] }
env_logger = "0.9"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
parking_lot = "0.12"
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["rt"] }

libfuzzer-sys = { version = "0.4.2", optional = true }
afl = { version = "0.12.2", optional = true }

[features]
default = []
afl-fuzz = ["afl"]
libfuzz = ["libfuzzer-sys"]

[[bin]]
name = "fuzz_target"
path = "src/libfuzz_target.rs"
required-features = ["libfuzz"]

[[bin]]
name = "fuzz_target_afl"
path = "src/afl_target.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "gen_fuzz"
path = "src/main.rs"
