[package]
name = "aleph-bft-mock"
version = "0.14.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
repository = "https://github.com/Cardinal-Cryptography/AlephBFT"
readme = "./README.md"
description = "Mock implementations of traits required by the aleph-bft package. Do NOT use outside of testing!"

[dependencies]
aleph-bft-types = { path = "../types", version = "0.13" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
