[package]
name = "aleph-bft-rmc"
version = "0.2.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "data-structures", "cryptography", "database"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
repository = "https://github.com/cardinal-cryptography/?"
keywords = ["asynchronous", "consensus", "bft", "blockchain", "distributed-systems"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
aleph-bft-crypto = { path = "../crypto" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
log = "0.4"

[dev-dependencies]
aleph-bft-mock = { path = "../mock" }
rand = "0.8"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
