[package]
name = "aleph-bft-rmc"
version = "0.12.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
categories = ["algorithms", "cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/AlephBFT"
keywords = ["asynchronous", "consensus", "bft", "distributed-systems"]
license = "Apache-2.0"
readme = "./README.md"
description = "Reliable MultiCast - a primitive for Reliable Broadcast protocol."

[dependencies]
aleph-bft-crypto = { path = "../crypto", version = "0.9" }
aleph-bft-types = { path = "../types", version = "0.13" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
log = "0.4"

[dev-dependencies]
aleph-bft-mock = { path = "../mock" }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
