[package]
name = "aleph-bft-types"
version = "0.13.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
repository = "https://github.com/Cardinal-Cryptography/AlephBFT"
readme = "./README.md"
description = "Traits that need to be implemented by the user of the aleph-bft package."

[dependencies]
aleph-bft-crypto = { path = "../crypto", version = "0.9" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
