[package]
name = "aleph-bft-examples-blockchain"
version = "0.0.2"
edition = "2021"
authors = ["Cardinal Cryptography"]
license = "Apache-2.0"
publish = false

[dependencies]
aleph-bft = { path = "../../consensus", version = "*" }
aleph-bft-mock = { path = "../../mock", version = "*" }
async-trait = "0.1"
clap = { version = "3.2.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
parking_lot = "0.12"
sha3 = "0.9"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "io-util", "net", "time"] }
unsigned-varint = { version = "0.7.0", features = ["futures", "asynchronous_codec"] }
