[package]
name = "aleph-bft-examples-dummy-honest"
version = "0.0.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
license = "Apache-2.0"
publish = false

[dev-dependencies]
aleph-bft = { path = "../../consensus", version = "*" }
aleph-bft-mock = { path = "../../mock", version = "*" }
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
libp2p = { version = "0.44", features = ["mdns", "tcp-tokio"]}
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
