[package]
name = "aleph-mock"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
publish = false
edition = "2018"

[dependencies]
aleph-bft = { path = "../../..", features = ["mock_common"] }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["std"] }
env_logger = { version = "0.8", default-features = false }
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
rand = "0.8"
tokio = { version = "1.6.1", features = ["rt"] }